--- a/task1/cv/cv.html
+++ b/task1/cv/cv.html
@@ -11,7 +11,7 @@
 </head>
 <body>
     <!-- -->
-    <img src="jahid.jpeg" width="148">
+    <img src="jahid.jpeg" width="152">
     <h2><strong>Jahidul Islam</strong></h2>
     <!-- -->
 
@@ -32,14 +32,14 @@
             <th>BSc(Hons)</th>
         </tr>
         <tr>
-            <td>Kalihati R.S.P.High School</td>
-            <td>Tangail <govt class="college"></govt></td>
+            <td>Kalihati R.S.P. High School</td>
+            <td>Tangail <govt class="College"></govt></td>
             <td>American International University-Bangladesh.</td>
         </tr>
         <tr>
             <td>Result: 5.00</td>
             <td>Result: 5.00</td>
-            <td>Result: 3.55</td>
+            <td>Result: 3.52</td>
         </tr>
         <tr>
             <td>Group: Science</td>
